cpp/include/goldy.h

// Result codes for FFI functions.
typedef enum GoldyResult {
    // Operation succeeded.
    GOLDY_RESULT_OK = 0,
    // Invalid argument provided.
    GOLDY_RESULT_INVALID_ARGUMENT = 1,
    // Null pointer provided.
    GOLDY_RESULT_NULL_POINTER = 2,
    // GPU operation failed.
    GOLDY_RESULT_GPU_ERROR = 3,
    // Shader compilation failed.
    GOLDY_RESULT_SHADER_ERROR = 4,
    // Resource creation failed.
    GOLDY_RESULT_RESOURCE_ERROR = 5,
    // Internal error.
    GOLDY_RESULT_INTERNAL_ERROR = 6,
} GoldyResult;
// Per-node resource access for task graph bindings.
typedef enum GoldyNodeAccess {
    GOLDY_NODE_ACCESS_READ = 0,
    GOLDY_NODE_ACCESS_WRITE = 1,
    GOLDY_NODE_ACCESS_READ_WRITE = 2,
} GoldyNodeAccess;
// Index format.
typedef enum GoldyIndexFormat {
    GOLDY_INDEX_FORMAT_UINT16 = 0,
    GOLDY_INDEX_FORMAT_UINT32 = 1,
} GoldyIndexFormat;
// Opaque handle to a Goldy Buffer.
typedef struct GoldyBuffer GoldyBuffer;
// Opaque handle to a Goldy Device.
typedef struct GoldyDevice GoldyDevice;
// Opaque handle to a Goldy RenderPipeline.
typedef struct GoldyRenderPipeline GoldyRenderPipeline;
// Opaque handle to a Goldy RenderTarget.
typedef struct GoldyRenderTarget GoldyRenderTarget;
// Opaque handle to a Goldy Surface.
//
// Surface creation is platform-specific and typically done through
// higher-level bindings that can pass window handles.
typedef struct GoldySurface GoldySurface;
// Opaque handle to a Goldy TaskGraph.
typedef struct GoldyTaskGraph GoldyTaskGraph;
// Opaque token returned by [`goldy_task_graph_declare_swapchain_output`].
//
// Carries no data; exists for type safety at the C ABI boundary.
typedef struct GoldySwapchainOutput {
    uint8_t _private[0];
} GoldySwapchainOutput;
// RGBA color with floating point components (0.0 - 1.0).
typedef struct GoldyColor {
    float r;
    float g;
    float b;
    float a;
} GoldyColor;
// Create a surface from an AppKit `NSView` pointer.
//
// # Safety
// - `device` must be valid.
// - `ns_view` must be a valid `NSView*` for the window's content view.
// - The view must outlive the surface.
struct GoldySurface *goldy_surface_create_appkit(const struct GoldyDevice *device, void *ns_view);
// Create a surface from Wayland `wl_display` and `wl_surface` pointers.
//
// # Safety
// - `device` must be valid.
// - `display` and `surface` must be valid Wayland handles for the window.
// - They must outlive the surface.
struct GoldySurface *goldy_surface_create_wayland(const struct GoldyDevice *device,
                                                  void *display,
                                                  void *surface);
// Create a surface from a Win32 HWND.
//
// # Arguments
// * `device` - A valid Goldy device pointer
// * `hwnd` - A Win32 HWND (window handle)
//
// # Returns
// A pointer to the created surface, or null on failure.
// Call `goldy_get_last_error()` for error details on failure.
//
// # Safety
// - The device pointer must be valid and not null.
// - The hwnd must be a valid Win32 window handle.
// - The window must remain valid for the lifetime of the surface.
struct GoldySurface *goldy_surface_create_win32(const struct GoldyDevice *device, void *hwnd);
// Add a render-target → swapchain blit node to the graph.
//
// # Safety
// All pointers must be valid.
enum GoldyResult goldy_task_graph_copy_render_target_to_swapchain(struct GoldyTaskGraph *graph,
                                                                  const struct GoldyRenderTarget *src,
                                                                  const struct GoldySwapchainOutput *_swapchain);
// Declare that this graph will copy to the swapchain at submit time.
//
// Returns a pointer to a per-graph sentinel (not heap-allocated). The pointer is
// valid until the graph is destroyed and must be passed to
// [`goldy_task_graph_copy_render_target_to_swapchain`].
//
// # Safety
// The graph pointer must be valid.
struct GoldySwapchainOutput *goldy_task_graph_declare_swapchain_output(struct GoldyTaskGraph *graph);
// Analyze the graph, submit GPU work, and block until complete.
//
// # Safety
// All pointers must be valid.
enum GoldyResult goldy_task_graph_dispatch(struct GoldyTaskGraph *graph,
                                           const struct GoldyDevice *device);
// Begin recording an offscreen render pass on `target`.
//
// Only one render pass may be open at a time per graph.
//
// # Safety
// All pointers must be valid. `target` must outlive the graph recording session.
enum GoldyResult goldy_task_graph_render_pass_begin(struct GoldyTaskGraph *graph,
                                                    const char *label,
                                                    const struct GoldyRenderTarget *target);
// Declare a graph dependency on a buffer for the active render pass.
//
// # Safety
// All pointers must be valid.
enum GoldyResult goldy_task_graph_render_pass_bind_buffer(struct GoldyTaskGraph *graph,
                                                          const struct GoldyBuffer *buffer,
                                                          enum GoldyNodeAccess access);
// Bind shader resource slots from buffers for the active render pass.
//
// # Safety
// All pointers must be valid. `buffers` must contain `buffer_count` elements.
enum GoldyResult goldy_task_graph_render_pass_bind_resources(struct GoldyTaskGraph *graph,
                                                             const struct GoldyBuffer *const *buffers,
                                                             uint32_t buffer_count);
// Clear the color attachment in the active render pass.
//
// # Safety
// The graph pointer must be valid.
enum GoldyResult goldy_task_graph_render_pass_clear(struct GoldyTaskGraph *graph,
                                                    struct GoldyColor color);
// Clear the depth attachment in the active render pass.
//
// # Safety
// The graph pointer must be valid.
enum GoldyResult goldy_task_graph_render_pass_clear_depth(struct GoldyTaskGraph *graph,
                                                          float depth);
// Draw non-indexed primitives in the active render pass.
//
// # Safety
// The graph pointer must be valid.
enum GoldyResult goldy_task_graph_render_pass_draw(struct GoldyTaskGraph *graph,
                                                   uint32_t first_vertex,
                                                   uint32_t vertex_count,
                                                   uint32_t first_instance,
                                                   uint32_t instance_count);
// Draw a fullscreen triangle (3 vertices, 1 instance) in the active render pass.
//
// # Safety
// The graph pointer must be valid.
enum GoldyResult goldy_task_graph_render_pass_draw_fullscreen(struct GoldyTaskGraph *graph);
// Draw indexed primitives in the active render pass.
//
// # Safety
// The graph pointer must be valid.
enum GoldyResult goldy_task_graph_render_pass_draw_indexed(struct GoldyTaskGraph *graph,
                                                           uint32_t first_index,
                                                           uint32_t index_count,
                                                           int32_t base_vertex,
                                                           uint32_t first_instance,
                                                           uint32_t instance_count);
// Finalize the active render pass and append it to the graph.
//
// # Safety
// The graph pointer must be valid.
enum GoldyResult goldy_task_graph_render_pass_finish(struct GoldyTaskGraph *graph);
// Bind an index buffer for the active render pass.
//
// # Safety
// All pointers must be valid.
enum GoldyResult goldy_task_graph_render_pass_set_index_buffer(struct GoldyTaskGraph *graph,
                                                               const struct GoldyBuffer *buffer,
                                                               enum GoldyIndexFormat format);
// Set the render pipeline for the active render pass.
//
// # Safety
// All pointers must be valid.
enum GoldyResult goldy_task_graph_render_pass_set_pipeline(struct GoldyTaskGraph *graph,
                                                           const struct GoldyRenderPipeline *pipeline);
// Bind a vertex buffer slot for the active render pass.
//
// # Safety
// All pointers must be valid.
enum GoldyResult goldy_task_graph_render_pass_set_vertex_buffer(struct GoldyTaskGraph *graph,
                                                                uint32_t slot,
                                                                const struct GoldyBuffer *buffer);
// Bind a vertex buffer slot with a byte offset for the active render pass.
//
// # Safety
// All pointers must be valid.
enum GoldyResult goldy_task_graph_render_pass_set_vertex_buffer_offset(struct GoldyTaskGraph *graph,
                                                                       uint32_t slot,
                                                                       const struct GoldyBuffer *buffer,
                                                                       uint64_t offset);